--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@types/react-dom": "18.2.7",
-    "eslint": "8.49.0",
+    "classnames": "^2.3.2",
+    "cross-env": "^7.0.3",
     "eslint-config-next": "13.5.2",
     "next": "13.5.2",
     "react": "18.2.0",
@@ -19,6 +21,11 @@
   "devDependencies": {
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.50.0",
+    "stylelint-config-standard": "^34.0.0",
+    "stylelint-order": "^6.0.3",
     "typescript": "^5.2.2"
   }
 }
