--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.6.3",
     "@types/react": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^6.7.2",
